crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_result_in_req.rs
fn bad(x: i32) -> i32
//@ req "{result} == 1"
//@ ens "true"
{
    x
}

fn main() {}
